zeta-code/tui/src/app/fullscreen/snapshots/app__fullscreen__modal__tests__modal_search_with_background_question.snap
---
source: zeta-code/tui/src/app/fullscreen/modal_tests.rs
expression: frame_text(&app)
---
  .                                                                            [— / —] [Dashboard]  
                                                                                                    
                                                                                                    
            ┌── Config ───────────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │   General    Providers    Language servers    Issues                    │             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ Screen mode                                                        │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │  Screen mode    Use a full screen or keep terminal histor    fullscreen │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
┌Question  (│                                                                         │────────────┐
│Choose an o│                                                                         │            │
│> Continue │                                                                         │            │
│  自 己 输 入  │                                                                         │            │
│           │                                                                         │            │
└───────────│                                                                         │────────────┘
            │                                                                         │             
  ╭─────────│  Enter/Esc/Ctrl+C to return  ·  Tab/Shift+Tab to switch                 │──────────╮  
  │ > Build └─────────────────────────────────────────────────────────────────────────┘          │  
  ╰──────────────────────────────────────────────────────────────────────────── Automatic model ─╯
