zeta-code/tui/src/app/fullscreen/snapshots/app__fullscreen__modal__tests__settings_on_home.snap
---
source: zeta-code/tui/src/app/fullscreen/modal_tests.rs
expression: frame_text(&app)
---
  ≡ .                                                                          [— / —] [Dashboard]  
                                                                                                    
                                                                                                    
            ┌── Config ───────────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │   General    Providers    Language servers    Issues                    │             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ Search configuration                                               │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │> Vim mode                    Use Vim editing in ChatInput    [   ]      │             
            │  Memory diagnostics          Continuously collect bounded    [   ]      │             
            │  Automatic updates           Choose release cadence          Latest     │             
            │  Show Git changes as diff    Show added and deleted lines    [   ]      │             
            │  Language                    Change the interface languag    English    │             
            │  Status bar style            Text and numbers, clean and     Simple     │             
            │  Key hint style              Emphasize keys over their de    Contrast   │             
            │  Screen mode                 Use a full screen or keep te    fullscreen │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
  ╭─────────│  Enter/Space to change · Tab/Shift+Tab to switch · Esc to close         │──────────╮  
  │ > preser└─────────────────────────────────────────────────────────────────────────┘          │  
  ╰──────────────────────────────────────────────────────────────────────────── Automatic model ─╯
